--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.13.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "style-loader": "^0.13.0"
+    "style-loader": "^0.13.0",
+    "wolfy87-eventemitter": "^4.3.0"
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
