--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "socket.io": "^1.4.5",
     "style-loader": "^0.13.0",
     "wolfy87-eventemitter": "^4.3.0"
   },
