--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react-chat",
   "version": "0.0.1",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,5 +21,14 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/NanaMorse/react-chat.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NanaMorse/react-chat/issues"
+  },
+  "homepage": "https://github.com/NanaMorse/react-chat#readme",
+  "description": ""
 }
